--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "roboto-fontface-bower",
-  "version": "0.1.4",
+  "name": "roboto-slab-fontface-bower",
+  "version": "0.0.1",
   "ignore": [
     "**/.*",
     "node_modules",
