Add main entry to bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "roboto-slab-fontface-bower",
   "version": "0.0.1",
+  "main": "./**/*.{woff,svg,eot,ttf,css}",
   "ignore": [
     "**/.*",
     "node_modules",
